Improved hero section

--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
 
     <!--------- Main sections ----------->
     <main>
-        <!-------- Showcase section --------->
-        <section class="showcase">
+        <!-------- Hero section --------->
+        <section class="hero">
             <div class="section-title-container">
-                <!--------- Showcase title ---------->
+                <!--------- Hero title ---------->
                 <h2 class="section-title">Welcome to <span class="highlight-one">The Coffee Shop!</span></h2>
                 <!----------------------------------->
             </div>
 
-            <!-------- Showcase slides ---------->
+            <!-------- Hero slides ---------->
             <div class="slides">
                 <!------------- Slide --------------->
                 <div class="slide active">
@@ -136,14 +136,38 @@
                         <!----------------------------------->
 
                         <!-------- Slide description -------->
-                        <p class="slide-description">Is a beloved Italian coffee classic, known for its
-                            exquisite balance of espresso,
-                            steamed milk, and velvety milk foam. At <span class="highlight-two">The Coffee Shop</span>,
-                            we
-                            create
-                            cappuccinos that are a true work
-                            of
-                            art.
+                        <p class="slide-description">Indulge in the timeless allure of the cappuccino, an iconic Italian
+                            masterpiece that tantalizes the senses with every sip. At <span class="highlight-two">The
+                                Coffee Shop</span>, we elevate this beloved classic to new heights, crafting cappuccinos
+                            that embody the essence of artisanal perfection.
+
+                            <br><br>
+
+                            Prepare to embark on a sensory journey as you immerse yourself in the rich depths of our
+                            meticulously brewed espresso. Each velvety shot, sourced from the finest Arabica beans,
+                            delivers a symphony of bold flavors that dance across your palate with unrivaled intensity.
+
+                            <br><br>
+
+                            But the magic doesn't stop there. Our skilled baristas expertly steam the freshest milk to
+                            silky perfection, infusing it with a delicate sweetness that complements the espresso's
+                            robust character. With precision and care, we pour this creamy elixir into the waiting
+                            embrace of the espresso, creating a harmonious union of coffee and milk that is nothing
+                            short of divine.
+
+                            <br><br>
+
+                            As the final flourish, we crown your cappuccino with a luxurious layer of frothy milk foam,
+                            artfully sculpted to perfection. This luscious blanket of foam adds a tantalizing textural
+                            contrast, enveloping your senses in a velvety embrace that lingers long after your last sip.
+
+                            <br><br>
+
+                            Whether you're seeking a morning pick-me-up or a luxurious afternoon indulgence, our
+                            cappuccinos offer a sublime balance of boldness and decadence. With each sip, you'll
+                            discover why the cappuccino has earned its place as a timeless classic, cherished by coffee
+                            aficionados around the world. Experience the magic of the cappuccino at The Coffee Shop
+                            today.
                         </p>
                         <!----------------------------------->
                     </div>
@@ -175,11 +199,37 @@
                         <!----------------------------------->
 
                         <!-------- Slide description -------->
-                        <p class="slide-description">Is a decadent
+                        <p class="slide-description">
+                            Dive into the sublime simplicity of our Affogato, a decadent
                             Italian delight that marries the rich flavors of espresso with the creamy indulgence of
-                            gelato. At <span class=highlight-two>The Coffee
-                                Shop</span>, we invite you to experience the exquisite harmony of contrasting
+                            gelato. At <span class="highlight-two">The Coffee Shop</span>, we invite you to experience
+                            the exquisite harmony of contrasting
                             textures and temperatures in this unforgettable dessert.
+
+                            <br><br>
+
+                            Picture this: a scoop of velvety, artisanal gelato, lovingly crafted from the finest
+                            ingredients, nestled in a delicate pool of freshly brewed espresso. As the espresso cascades
+                            over the creamy gelato, it creates a symphony of flavors that dance upon your palate,
+                            tantalizing your taste buds with each luxurious spoonful.
+
+                            <br><br>
+
+                            Indulge in the juxtaposition of hot and cold, bitter and sweet, as the robust notes of the
+                            espresso mingle with the smooth, creamy gelato. The result? A divine fusion of bold espresso
+                            intensity and creamy, luscious sweetness that is nothing short of extraordinary.
+
+                            <br><br>
+
+                            Savor each decadent bite as the flavors meld together in perfect harmony, leaving you
+                            craving another taste of this heavenly concoction. Whether enjoyed as a dessert after a
+                            sumptuous meal or as a delightful afternoon treat, our Affogato promises to delight and
+                            satisfy even the most discerning of palates.
+
+                            <br><br>
+
+                            Elevate your dessert experience with the Affogato at The Coffee Shop, where every spoonful
+                            is a journey to culinary bliss.
                         </p>
                         <!----------------------------------->
                     </div>
@@ -212,9 +262,41 @@
 
                         <!-------- Slide description -------->
                         <p class="slide-description">
-                            Each sip of our Mocha unveils a symphony of sensations, from the bold
-                            intensity of freshly brewed espresso to the luscious sweetness of premium chocolate,
-                            harmoniously balanced by the silky smoothness of expertly steamed milk.
+                            Indulge in the rich and decadent flavors of our signature Mocha, a luxurious treat crafted
+                            to tantalize your taste buds and awaken your senses. Each sip of our Mocha unveils a
+                            symphony of sensations, from the bold intensity of freshly brewed espresso to the luscious
+                            sweetness of premium chocolate, harmoniously balanced by the silky smoothness of expertly
+                            steamed milk.
+
+                            <br><br>
+
+                            At <span class="highlight-two">The Coffee Shop</span>, we take pride in sourcing the finest
+                            ingredients to create a Mocha that
+                            transcends ordinary coffee experiences. Our espresso is carefully extracted from the finest
+                            Arabica beans, delivering a robust flavor profile that serves as the perfect foundation for
+                            our indulgent concoction.
+
+                            <br><br>
+
+                            To elevate the experience further, we blend rich, velvety chocolate into our Mocha,
+                            imparting a luxurious depth of flavor that delights the palate with every sip. The chocolate
+                            infusion adds a touch of sweetness that complements the boldness of the espresso, creating a
+                            harmonious union of contrasting tastes.
+
+                            <br><br>
+
+                            As the final flourish, our skilled baristas expertly steam the freshest milk to perfection,
+                            infusing it with a delicate creaminess that enhances the overall texture of the drink. The
+                            smooth, frothy milk adds a luxurious mouthfeel to the Mocha, elevating it to a truly
+                            decadent indulgence.
+
+                            <br><br>
+
+                            Whether you're seeking a morning pick-me-up or a luxurious afternoon treat, our Mocha
+                            promises to satisfy your cravings and transport you to a realm of unparalleled delight.
+                            Experience the irresistible allure of our Mocha at <span class="highlight-two">The Coffee
+                                Shop</span> today and discover why
+                            it's a favorite among coffee connoisseurs.
                         </p>
                         <!----------------------------------->
                     </div>
@@ -247,12 +329,33 @@
                         <!----------------------------------->
 
                         <!-------- Slide description -------->
-                        <p class="slide-description">At <span class=highlight-two>The Coffee
-                                Shop</span>, our Doppio is a testament to the essence of
-                            espresso &ndash; bold, robust, and bursting with flavor. Made from the finest Arabica beans,
-                            each
-                            double shot is meticulously brewed to perfection, extracting the full depth and complexity
-                            of the coffee beans.
+                        <p class="slide-description">
+                            At <span class="highlight-two">The Coffee
+                                Shop</span>, we invite you to experience the essence of
+                            espresso in its purest form with our signature Doppio. A testament to the bold and robust
+                            flavors of premium coffee, our Doppio is a double shot of espresso meticulously brewed to
+                            perfection.
+
+                            <br><br>
+
+                            Made from the finest Arabica beans sourced from around the world, each Doppio shot delivers
+                            an unparalleled depth and complexity of flavor that captivates the senses. Our skilled
+                            baristas ensure that every double shot is extracted with precision, preserving the rich
+                            aroma and intense character of the coffee beans.
+
+                            <br><br>
+
+                            With its bold, full-bodied profile and velvety texture, our Doppio is a true coffee lover's
+                            delight. Whether enjoyed on its own for a quick pick-me-up or as the foundation for your
+                            favorite espresso-based beverage, the Doppio promises a sensory journey like no other.
+
+                            <br><br>
+
+                            Experience the rich tradition and unmatched quality of our Doppio at <span
+                                class="highlight-two">The Coffee
+                                Shop</span> and
+                            discover why it's a favorite among aficionados of fine coffee. Indulge in the bold flavors
+                            and exquisite craftsmanship of our Doppio, and savor every moment of your coffee ritual.
                         </p>
                         <!----------------------------------->
                     </div>
@@ -387,10 +490,6 @@
                         </p>
                         <!----------------------------------->
                     </div>
-
-                    <!------- Expand slide button ------->
-                    <button class="slide-options-btn special-one">See drink</button>
-                    <!----------------------------------->
                 </div>
                 <!----------------------------------->
 
@@ -480,7 +579,7 @@
         <!---------- Plans section ---------->
         <section class="plans-section">
             <div class="section-title-container">
-                <!--------- Showcase title ---------->
+                <!--------- Plans section title ---------->
                 <h2 class="section-title">Join us today and enjoy <span class="highlight-three">the best</span> coffee
                     experience!</span></h2>
                 <!----------------------------------->
