--- a/index.html
+++ b/index.html
@@ -484,9 +484,36 @@
                         <!----------------------------------->
 
                         <!------- Slide description --------->
-                        <p class="slide-description">Crafted with the finest blueberries, this enchanting concoction
-                            offers a burst of fruity sweetness harmonized with the smooth richness of our signature
-                            coffee blend.
+                        <p class="slide-description">
+                            Indulge in the delightful symphony of flavors with our signature
+                            "Blueberry Bliss" drink, an enchanting concoction crafted to tantalize your taste buds and
+                            uplift your spirits. At <span class="highlight-two">The Coffee
+                                Shop</span>, we've reimagined the classic coffee experience by
+                            infusing it with the essence of freshly picked blueberries, creating a beverage that
+                            transcends the ordinary and transports you to a realm of pure bliss.
+
+                            <br><br>
+
+                            The first sip of Blueberry Bliss is a revelation—a burst of fruity freshness that awakens
+                            the senses and invigorates the soul. As you continue to savor each sip, you'll discover
+                            layers of complexity unfolding, with hints of tartness giving way to a lingering sweetness
+                            that dances on the palate.
+
+                            <br><br>
+
+                            Pair your Blueberry Bliss drink with a freshly baked pastry or a slice of creamy cheesecake
+                            for the ultimate indulgence. The interplay of flavors between the blueberries and the
+                            buttery richness of the pastry creates a symphony of taste sensations that will leave you
+                            craving for more.
+
+                            <br><br>
+
+                            Whether you're seeking a moment of quiet contemplation or a burst of inspiration to fuel
+                            your day, our Blueberry Bliss drink promises to be your perfect companion. Visit <span
+                                class="highlight-two">The Coffee
+                                Shop</span> today and embark on a journey of flavor discovery with our exquisite
+                            Blueberry Bliss
+                            creation. Let every sip transport you to a realm of pure joy and culinary delight.
                         </p>
                         <!----------------------------------->
                     </div>
@@ -596,7 +623,7 @@
                         <li class="plans-section__card-list-item">Special drinks <i class="fa fa-check"></i></li>
                         <li class="plans-section__card-list-item">Special discounts <i class="fa fa-check"></i></li>
                         <li class="plans-section__card-list-item">Surprise gifts <i class="fa fa-times"></i></li>
-                        <li class="plans-section__card-list-item">Free drinks for special occasions <i
+                        <li class="plans-section__card-list-item">Free drinks in special occasions <i
                                 class="fa fa-times"></i></li>
                         <li class="plans-section__card-list-item">Free pastries and savories <i class="fa fa-times"></i>
                         </li>
@@ -637,7 +664,7 @@
                         <li class="plans-section__card-list-item">Special drinks <i class="fa fa-check"></i></li>
                         <li class="plans-section__card-list-item">Special discounts <i class="fa fa-check"></i></li>
                         <li class="plans-section__card-list-item">Surprise gifts <i class="fa fa-check"></i></li>
-                        <li class="plans-section__card-list-item">Free drinks for special occasions <i
+                        <li class="plans-section__card-list-item">Free drinks in special occasions <i
                                 class="fa fa-check"></i></li>
                         <li class="plans-section__card-list-item">Free pastries and savories <i class="fa fa-check"></i>
                         </li>
@@ -679,7 +706,7 @@
                         <li class="plans-section__card-list-item">Special drinks <i class="fa fa-check"></i></li>
                         <li class="plans-section__card-list-item">Special discounts <i class="fa fa-check"></i></li>
                         <li class="plans-section__card-list-item">Surprise gifts <i class="fa fa-check"></i></li>
-                        <li class="plans-section__card-list-item">Free drinks for special occasions <i
+                        <li class="plans-section__card-list-item">Free drinks in special occasions <i
                                 class="fa fa-check"></i></li>
                         <li class="plans-section__card-list-item">Free pastries and savories <i class="fa fa-times"></i>
                         </li>
