--- a/index.html
+++ b/index.html
@@ -610,7 +610,8 @@
             <!----------------------------------->
 
             <!------- Copyright message --------->
-            <h4 class="copy-message">&copy; Copyright 2024 | <span class="highlight-one">The Coffee Shop</span></h4>
+            <h4 class="copy-message">&copy; 2024 | <span class="highlight-one">The Coffee Shop</span>, by Carlos
+                Filipe</h4>
             <!----------------------------------->
         </nav>
     </footer>
