--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     <link rel="stylesheet" href="./CSS/global/typography.css">
     <link rel="stylesheet" href="./CSS/home.css">
     <!----------------------------------->
+
+    <!----------- JavaScript ------------>
+    <script type="module" src="./JS/utils.js"></script>
+    <script type="module" src="./JS/main-script.js"></script>
+    <!----------------------------------->
 </head>
 
 <body>
@@ -59,6 +64,7 @@
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
                 <!----------------------------------->
+
 
                 <ul class="main-nav__list">
                     <li class="current main-nav__list-item">
@@ -93,10 +99,6 @@
                             aria-hidden="true"></i></button>
                 </div>
             </div>
-            <!----------------------------------->
-
-            <!--------- Login and cart ---------->
-
             <!----------------------------------->
         </nav>
         <!----------------------------------->
@@ -608,7 +610,7 @@
     <!----------------------------------->
 
     <!------------- Modal --------------->
-    <!-- Should it be here? Also, pressing ESCAPE should close the modal as well. -->
+    <!-- Pressing ESCAPE should close the modal as well. -->
     <div id="drinkModal" class="modal">
         <!--------- Modal content ----------->
         <div class="modal-content">
@@ -705,11 +707,6 @@
         </div>
         <!----------------------------------->
     </div>
-    <!----------------------------------->
-
-    <!----------- JavaScript ------------>
-    <script type="module" src="./JS/utils.js"></script>
-    <script type="module" src="./JS/main-script.js"></script>
     <!----------------------------------->
 </body>
 
