--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
                 </button>
                 <!----------------------------------->
 
-
                 <ul class="main-nav__list">
                     <li class="current main-nav__list-item">
                         <a class="current main-nav__link" href="#home" aria-current="page" aria-label="Homepage">
@@ -192,7 +191,7 @@
 
                     <!---------- Slide buttons ---------->
                     <div class="slide__btns">
-                        <button class="slide__btn">See drink</button>
+                        <button class="slide__btn slide__btn--primary">See drink</button>
                         <button class="slide__btn slide__btn--secondary">View in app</button>
                     </div>
                     <!----------------------------------->
