--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <!----------------------------------->
 
     <!------------- Icons --------------->
-    <link rel="stylesheet" href="../">
     <link rel="stylesheet" href="./assets/misc/fontawesome-free-6.5.1-web/css/all.css">
     <link rel="icon" type="image/x-icon" href="./assets/imgs/logo.png">
     <!----------------------------------->
@@ -180,6 +179,16 @@
                 <div class="slide-description-container">
                     <!----------- Slide title ----------->
                     <h3 class="slide-title"><i class="fa-solid fa-mug-hot"></i> The Best Cappuccinos</h3>
+                    <!----------------------------------->
+
+                    <!------------- Ratings ------------->
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
                     <!----------------------------------->
 
                     <!-------- Slide description -------->
