--- a/index.html
+++ b/index.html
@@ -604,14 +604,13 @@
                 <li><a href="#"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-google-play" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-apple" aria-hidden="true"></i></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-google-play" aria-hidden="true"></i></a></li>
             </ul>
             <!----------------------------------->
 
             <!------- Copyright message --------->
-            <h4 class="copy-message">&copy; 2024 | <span class="highlight-one">The Coffee Shop</span>, by Carlos
-                Filipe</h4>
+            <h4 class="copy-message">&copy; 2024 | <span class="highlight-one">The Coffee Shop</span></h4>
             <!----------------------------------->
         </nav>
     </footer>
